@@ -7699,4 +7699,5 @@ EPRINTS-3.1-beta-2
 2008-08-08 tdb
  * OAI now searches for the eprint in archive or deletion, fixing #3424
  * OAI GetRecord no longer errors on an invalid identifier, fixing #3423
+ * get_object()/DataObj::new will no longer return eprints from any dataset
 
